document_siesta/after/execution_output.txt
COCOAPODS_SKIP_UPDATE_MESSAGE=TRUE JAZZY_FAKE_DATE=YYYY-MM-DD JAZZY_FAKE_MODULE_VERSION=Y.Y.Y JAZZY_FAKE_VERSION=X.X.X JAZZY_INTEGRATION_SPECS=TRUE ruby ROOT/bin/jazzy --output api-docs --swift-version=  2>&1
Using config file ROOT/tmp/document_siesta/.jazzy.yaml
Running xcodebuild
Parsing Configuration.swift (1/37)
Parsing ConfigurationPatternConvertible.swift (2/37)
Parsing Entity.swift (3/37)
Parsing EntityCache.swift (4/37)
Parsing Networking-URLSession.swift (5/37)
Parsing Networking.swift (6/37)
Parsing PipelineConfiguration.swift (7/37)
Parsing PipelineProcessing.swift (8/37)
Parsing ResponseTransformer.swift (9/37)
ROOT/tmp/document_siesta/Source/Siesta/Pipeline/ResponseTransformer.swift:12:12: error: no such module 'AppKit'
    import AppKit
           ^
Parsing StandardTransformers.swift (10/37)
Parsing HardWiredRequest.swift (11/37)
Parsing LiveRequest.swift (12/37)
Parsing NetworkRequest.swift (13/37)
Parsing ProgressTracker.swift (14/37)
Parsing Request.swift (15/37)
Parsing RequestCallbacks.swift (16/37)
Parsing RequestChaining.swift (17/37)
Parsing RequestCreation.swift (18/37)
Parsing RequestError.swift (19/37)
Parsing Resource.swift (20/37)
Parsing ResourceNavigation.swift (21/37)
Parsing ResourceObserver.swift (22/37)
Parsing Service.swift (23/37)
Parsing ARC+Siesta.swift (24/37)
Parsing Collection+Siesta.swift (25/37)
Parsing DebugFormatting.swift (26/37)
Parsing GCD+Siesta.swift (27/37)
Parsing Logging.swift (28/37)
Parsing OpenEnum.swift (29/37)
Parsing Optional+Siesta.swift (30/37)
Parsing Progress.swift (31/37)
Parsing Regex+Siesta.swift (32/37)
Parsing Siesta-ObjC.swift (33/37)
Parsing String+Siesta.swift (34/37)
Parsing URL+Siesta.swift (35/37)
Parsing WeakCache.swift (36/37)
Parsing Ω_Deprecations.swift (37/37)
WARNING: No documented top-level declarations match name "ResourceStatusOverlay" specified in categories file
WARNING: No documented top-level declarations match name "RemoteImageView" specified in categories file
WARNING: No documented top-level declarations match name "AlamofireProvider" specified in categories file
`Image` has no USR. First make sure all modules used in your project have been imported. If all used modules are imported, please report this problem by filing an issue at https://github.com/realm/jazzy/issues along with your Xcode project. If this token is declared in an `#if` block, please ignore this message.
building site
building search index
96% documentation coverage with 12 undocumented symbols
included 330 public or open symbols
skipped 144 private, fileprivate, internal, or package symbols (use `--min-acl` to specify a different minimum ACL)
jam out ♪♫ to your fresh new docs in `api-docs`
